// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile /> renders a button tile 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 1.25rem 1.5rem;
  color: #005994;
  font-weight: bold;
  font-size: 1.125rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:hover {
  border-color: #005994;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c1 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

<div>
  <button
    class="c0"
    href=""
  >
    <div
      class="c1"
    >
      Hello !
    </div>
    
  </button>
</div>
`;

exports[`<Tile /> renders dark and small 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 1rem 1.25rem;
  color: #005994;
  font-weight: bold;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:hover {
  border-color: #005994;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c1 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

<div>
  <button
    class="c0"
    href=""
  >
    <div
      class="c1"
    >
      Hello !
    </div>
    
  </button>
</div>
`;

exports[`<Tile /> renders with a div fake button inside 1`] = `
.c3 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c3:link,
.c3:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0c0c0e;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):active,
.c3:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
  border-color: #dbe2e9;
}

.c3[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 1.25rem 1.5rem;
  color: #005994;
  font-weight: bold;
  font-size: 1.125rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:hover {
  border-color: #005994;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c1 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

.c2 {
  margin-top: 1.25rem;
}

<div>
  <a
    class="c0"
    href="#"
  >
    <div
      class="c1"
    >
      Hello !
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        bouton
      </div>
    </div>
  </a>
</div>
`;

exports[`<Tile /> renders with an icon 1`] = `
.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 1.25rem 1.5rem;
  color: #005994;
  font-weight: bold;
  font-size: 1.125rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:hover {
  border-color: #005994;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c2 {
  display: block;
  max-width: 100%;
  padding-right: 1rem;
  overflow-y: auto;
}

.c1 {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
}

<div>
  <button
    class="c0"
    href=""
  >
    <div
      class="c1"
    >
      <svg
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="8"
          x2="21"
          y1="6"
          y2="6"
        />
        <line
          x1="8"
          x2="21"
          y1="12"
          y2="12"
        />
        <line
          x1="8"
          x2="21"
          y1="18"
          y2="18"
        />
        <line
          x1="3"
          x2="3"
          y1="6"
          y2="6"
        />
        <line
          x1="3"
          x2="3"
          y1="12"
          y2="12"
        />
        <line
          x1="3"
          x2="3"
          y1="18"
          y2="18"
        />
      </svg>
    </div>
    <div
      class="c2"
    >
      Hello !
    </div>
    
  </button>
</div>
`;
